--- a/newpost.html
+++ b/newpost.html
@@ -9,11 +9,35 @@
     </head> 
 
     <!-- Navbar stuff: Same on all tabs -->
-    <div class="navbar">
-      <a href="index.html">RatePEA</a>
+    <script> 
+      function art() { 
+        window.location = "chosencategory.html"; 
+      }
+      function english() { 
+        window.location = "chosencategory.html"; 
+      }
+      function history() { 
+        window.location = "chosencategory.html"; 
+      }
+      function language() { 
+        window.location = "chosencategory.html"; 
+      }
+      function math() { 
+        window.location = "chosencategory.html"; 
+      }
+      function religion() { 
+        window.location = "chosencategory.html"; 
+      }
+      function science() { 
+        window.location = "chosencategory.html"; 
+      }
+   </script>
+  <!-- Navbar stuff: Same on all tabs -->
+  <div class="navbar">
+      <a class = "active" href="index.html">RatePEA</a>
       
       <div class="subnav">
-        <button class="subnavbtn">Art</button>
+        <button class="subnavbtn" onclick = "art()">Art</button>
         <div class="subnav-content">
             <a href="#a2">200s</a>
             <a href="#a3">300s</a>
@@ -24,7 +48,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">English</button>
+        <button class="subnavbtn" onclick = "art()">English</button>
         <div class="subnav-content">
           <a href="#eg">General</a>
           <a href="#ee">Electives</a>
@@ -32,7 +56,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">History</button>
+        <button class="subnavbtn" onclick = "history()">History</button>
         <div class="subnav-content">
             <a href="#h2">200s</a>
             <a href="#h3">300s</a>
@@ -43,7 +67,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Langauge</i></button>
+        <button class="subnavbtn" onclick = "language()">Langauge</i></button>
         <div class="subnav-content">
           <a href="#lspa">Spanish</a>
           <a href="#lfre">French</a>
@@ -59,7 +83,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Math</button>
+        <button class="subnavbtn" onclick = "art()">Math</button>
         <div class="subnav-content">
           <a href="#m1">100s</a>
           <a href="#m2">200s</a>
@@ -71,7 +95,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Religion</button>
+        <button class="subnavbtn" onclick = "religion()">Religion</button>
         <div class="subnav-content">
           <a href="#r2">200s</a>
           <a href="#r3">300s</a>
@@ -82,7 +106,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Science</button>
+        <button class="subnavbtn" onclick = "science()">Science</button>
         <div class="subnav-content">
           <a href="#sbio">Biology</a>
           <a href="#schem">Chemistry</a>
@@ -91,7 +115,7 @@
         </div>
       </div>
 
-      <a href class ="active" href="newpost.html">New Post </a>
+      <a href="newpost.html">New Post</a>
 
     </div>
 
@@ -191,7 +215,6 @@
                 <th>
                   <br>
                   <label class="labelsf" for="comments">Comments and Review (How did you enjoy the course? Would you recomend it to others?)</label>
-                  <br>
                   <textarea rows="10" cols="80" id = "comments" name = "comments"> </textarea>
                   <br>
                 </th>
