--- a/newpost.html
+++ b/newpost.html
@@ -239,7 +239,7 @@
         <!-- Table and content inside the table -->
         <div>
             <!-- Declaring form -->
-            <form action="/action_page.php">
+            <form action="/http://localhost:4000/">
               <!-- Creating table 1 (Username)-->
               <table>
                  <th>
