--- a/course.html
+++ b/course.html
@@ -129,8 +129,8 @@
           Course Number: Coursename
         </h2>
         <h4>
-          Rating: <!-- Two stars to prove the fa stars work -->
-          <i class = 'fa fa-star checked' style="font-size:40px"></i> <i class = 'fa fa-star checked' style="font-size:40px"></i>
+          Rating: <!-- Temporary stars to prove the fa stars work -->
+          <i class = 'fa fa-star checked' style="font-size:40px"></i> <i class = 'fa fa-star checked' style="font-size:40px"></i> <i class = 'fa fa-star unchecked' style="font-size:40px"></i> <i class = 'fa fa-star unchecked' style="font-size:40px"></i> <i class = 'fa fa-star unchecked' style="font-size:40px"></i>
           <br>
           Subject: xxx
           <br>
