--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <!-- Setting CSS and Title -->
     <head>
-        <link rel="stylesheet" href="style.css" >
+        <link rel="stylesheet" href="indexstyle.css" >
+        <link rel="stylesheet" href="courseratingstyle.css" >
+        <link rel="stylesheet" type="text/css" href="courseratingstyle.css" >
         <title>
             Rate PEA 
         </title>
