--- a/newpost.html
+++ b/newpost.html
@@ -2,7 +2,9 @@
 <html>
     <!-- Setting CSS and title -->
     <head>
-      <link rel="stylesheet" type="text/css" href="style.css" >
+      <link rel="stylesheet" href="indexstyle.css" >
+      <link rel="stylesheet" type="text/css" href="courseratingstyle.css" >
+      <link rel="stylesheet" type="text/css" href="poststyle.css" >
       <title>            
         New Post
       </title>
